# server

./: .gitattributes  .gitignore  README.md  mines_game_data_persistence_implementation.md  mines_game_test_example.cpp
game/game/: CMakeLists.txt  README.md
game/game/config/: server_config.json
game/game/proto/: game.proto
game/game/src/: CMakeLists.txt  main.cpp
game/game/src/core/: CMakeLists.txt
game/game/src/core/application/interfaces/: i_game_service.h  i_user_service.h
game/game/src/core/application/services/: user_service.cpp  user_service.h
game/game/src/core/domain/interfaces/: i_bet.h  i_game.cpp  i_game.h
game/game/src/core/domain/models/: bet_record.h  game_manager.cpp  game_manager.h  game_snapshot.cpp  game_snapshot.h  player_in_game.cpp  player_in_game.h  player_session.h  user.cpp  user.h
game/game/src/core/infrastructure/common/: Logger_helper.cpp  Logger_helper.h  app_context.cpp  app_context.h  config_manager.cpp  config_manager.h  error_code.h  session_thread_pool.cpp  session_thread_pool.h  thread_pool.cpp  thread_pool.h  utils.cpp  utils.h
game/game/src/core/infrastructure/network/: connection_manager.cpp  connection_manager.h  http_server.cpp  http_server.h  protocol.h  tcp_server.cpp  tcp_server.h
game/game/src/core/infrastructure/persistence/: database_factory.cpp  database_factory.h  elastic_client.cpp  elastic_client.h  mysql_client.cpp  mysql_client.h  mysql_data_def.h  redis_client.cpp  redis_client.h
game/game/src/core/infrastructure/proto/: game.pb.cc  game.pb.h
game/game/src/core/infrastructure/proto/proto/: game.pb.cc  game.pb.h
game/game/src/core/infrastructure/service_discovery/: consul_client.cpp  consul_client.h
game/game/src/core/interfaces/: message_router.cpp  message_router.h
game/game/src/core/interfaces/handlers/: disconnect_handler.cpp  disconnect_handler.h  generic_handler.cpp  generic_handler.h  handler_registry.cpp  handler_registry.h  heartbeat_handler.cpp  heartbeat_handler.h  login_handler.cpp  login_handler.h  logout_handler.cpp  logout_handler.h
game/game/src/games/: CMakeLists.txt  game_def.h  game_factory.cpp  game_factory.h  game_registry.cpp  game_registry.h
game/game/src/games/mines_pro/: CMakeLists.txt
game/game/src/games/mines_pro/application/: mines_game_service.cpp  mines_game_service.h
game/game/src/games/mines_pro/domain/models/: mines_bet.h  mines_game.cpp  mines_game.h  mines_grid.cpp  mines_grid.h
game/game/src/games/mines_pro/domain/services/: mines_factory.cpp  mines_factory.h
game/game/src/games/mines_pro/infrastructure/repositories/: mines_bet_repository.h  mines_game_repository.cpp  mines_game_repository.h
game/game/src/games/mines_pro/interfaces/handlers/: mines_auto_cash_handler.cpp  mines_auto_cash_handler.h  mines_cancel_bet_handler.cpp  mines_cancel_bet_handler.h  mines_cash_handler.cpp  mines_cash_handler.h  mines_place_bet_handler.cpp  mines_place_bet_handler.h
game/game/src/games/slots/application/: slots_game_service.cpp  slots_game_service.h
game/game/src/games/slots/domain/services/: slots_factory.cpp  slots_factory.h
game/libuv_wrapper/: .gitignore  CMakeLists.txt
game/libuv_wrapper/libuv1.51.0/lib/gcc11.5.0/: libuv.so.1.0.0
game/libuv_wrapper/libuv1.51.0/lib/gcc11.5.0/pkgconfig/: libuv.pc
game/libuv_wrapper/project/vs2017/: uv-cpp.sln
game/libuv_wrapper/project/vs2017/DNS/: DNS.vcxproj.filters
game/libuv_wrapper/project/vs2017/all_example/: all_example.vcxproj.filters
game/libuv_wrapper/project/vs2017/clients/: clients.vcxproj.filters
game/libuv_wrapper/project/vs2017/echo_server/: echo_server.vcxproj.filters
game/libuv_wrapper/project/vs2017/helloworld/: helloworld.vcxproj.filters
game/libuv_wrapper/project/vs2017/http_client/: http_client.vcxproj.filters
game/libuv_wrapper/project/vs2017/http_server/: http_server.vcxproj.filters
game/libuv_wrapper/project/vs2017/loop_exit/: loop_exit.vcxproj.filters
game/libuv_wrapper/project/vs2017/pingpong/: pingpong.vcxproj.filters
game/libuv_wrapper/project/vs2017/radix_tree/: radix_tree.vcxproj.filters
game/libuv_wrapper/project/vs2017/rpc/: rpc.vcxproj.filters
game/libuv_wrapper/project/vs2017/sever_quit/: sever_quit.vcxproj.filters
game/libuv_wrapper/project/vs2017/uv_cpp_lib/: uv_cpp_lib.vcxproj.filters
game/libuv_wrapper/test/: CMakeLists.txt  build.sh
game/libuv_wrapper/test/basic_client/: client.cpp
game/libuv_wrapper/test/basic_server/: server.cpp
game/libuv_wrapper/test/dns_example/: dns_example.cpp
game/libuv_wrapper/test/heartbeat_example/: CMakeLists.txt  README.md  heartbeat_client.cpp  heartbeat_server.cpp
game/libuv_wrapper/test/http_client/: http_client.cpp  simple_test.cpp
game/libuv_wrapper/test/http_server/: http_server.cpp
game/libuv_wrapper/test/process_example/: README_timer_comparison.md  process_example.cpp  process_example_timewheel_v2.cpp
game/libuv_wrapper/test/timer_example/: timer_example.cpp
game/libuv_wrapper/test/udp_example/: udp_example.cpp
game/libuv_wrapper/uv/: Async.cpp  CycleBuffer.cpp  DnsGet.cpp  EventLoop.cpp  GlobalConfig.cpp  Idle.cpp  ListBuffer.cpp  LogWriter.cpp  Packet.cpp  Signal.cpp  SocketAddr.cpp  TcpAcceptor.cpp  TcpClient.cpp  TcpConnection.cpp  TcpServer.cpp  Timer.cpp  Udp.cpp
game/libuv_wrapper/uv/http/: HttpClient.cpp  HttpServer.cpp
game/libuv_wrapper/uv/include/: CycleBuffer.hpp  EventLoop.hpp  GlobalConfig.hpp  ListBuffer.hpp  LogWriter.hpp  PacketBuffer.hpp  Signal.hpp  TcpAcceptor.hpp  TcpConnection.hpp  TcpServer.hpp  Timer.hpp  TimerWheel.hpp  Udp.hpp
game/libuv_wrapper/uv/include/http/: HttpCommon.hpp  RadixTree.hpp
gate/: build.sh  go.mod  go.sum
gate/cmd/gameserver_stub/: main.go
gate/cmd/gateway/: main.go
gate/cmd/mines_bot/: main.go
gate/cmd/test/: main.go
gate/internal/config/: config.go
gate/internal/handler/: client_handler.go  gameserver_handler.go
gate/internal/interfaces/: interfaces.go
gate/internal/model/: client.go  gameserver.go
gate/internal/service/: consul.go  redis.go
gate/internal/util/: logger.go  (+1 more)
gate/proto/: common.pb.go  login.pb.go
(+2 files in other folders)
